testsuite/poke.pkl/asm-exp-diag-3.pk
/* { dg-do compile } */

var a = asm
void: /* { dg-error "void" } */
  ("foo");
